# paige-ml-sdk

./: CHANGELOG.md  README.md  pyproject.toml
examples/: README.md  azure_ml_example.ipynb  cmd.sh  cmd_from_config.sh  config.yaml  dataset.csv  slide_1.svs.pt  slide_2.svs.pt  slide_4.svs.pt
src/paige/ml_sdk/: __main__.py  array_procedures.py  collections_reduce.py  convert_to_torch_dtype.py  dict_procedures.py  enforce_type.py
src/paige/ml_sdk/dataset_universe/: collate_fns.py  datamodule.py  embedding_loader.py
src/paige/ml_sdk/dataset_universe/datasets/: dataset.py  fit.py  predict.py
src/paige/ml_sdk/distributed/: collections_map.py  collective.py  torch.py
src/paige/ml_sdk/lightning_extension/: __init__.py  cli.py  trainer.py
src/paige/ml_sdk/model_universe/: aggregator.py  algos.py  instance_mask.py
src/paige/ml_sdk/model_universe/losses/: loss_computer.py  losses_reducer.py
src/paige/ml_sdk/model_universe/metrics/: binary_metrics_functions.py  binary_threshold_selectors.py  sklearn.py
src/paige/ml_sdk/model_universe/metrics/metrics_computers/: aggregator_metrics.py  binary_classification.py  multiclass_classification.py
src/paige/ml_sdk/model_universe/nn/: agata.py  perceiver.py
src/paige/ml_sdk/model_universe/nn/components/: attention.py  fc.py
src/paige/ml_sdk/model_universe/optimizers/: lr_schedulers.py  optimizer_partial.py
tests/: conftest.py  test_main.py
tests/dataset_universe/: test_collate_fns.py  test_datamodule.py  test_embedding_loader.py
tests/dataset_universe/datasets/: test_dataset.py  test_fit.py  test_predict.py
tests/lightning_extension/: test_cli.py
tests/model_universe/: test_aggregator.py  test_instance_mask.py
tests/model_universe/losses/: test_loss_computer.py  test_losses_reducer.py
tests/model_universe/metrics/metrics_computers/: test_aggregator_metrics.py  test_binary_classification.py  test_multiclass_classification.py
tests/model_universe/nn/: test_agata.py
tests/model_universe/nn/components/: test_attention.py  test_fc.py
